objects/Proposed_Products__c.object
<CustomObject>
    <fields>
        <fullName>Drug_Product_Options__c</fullName>
        <label>Drug Product Options</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Product_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ASO No Drug</fullName>
                </value>
                <value>
                    <fullName>ASO Drug (create drug product)</fullName>
                </value>
                <value>
                    <fullName>Option 1: $0/$25/$45/50% w/ $75 max and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 2: $8/$15/$30 w/ $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 2: $0/$25/$45/50% w/ $75 max and $100 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 4: $10/$20/$35 w/ $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 4: $8/$15/$30 w/ $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 7: $10/$20/$35 w/ $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 8: $0/$25/$45/50% w/ $75 max and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 9: $0/$25/$45/50% w/ $75 max and $100 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 12: $10/$25/$45/50% w/ $75 max and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 15: $10/$25/$45/50% w/ $75 max and $100 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 18: $10/$25/$45/50% w/ $75 max and $200 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 21: $15/$35/$60/50% w/ $100 max and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 24: $15/$35/$60/50% w/ $100 max and $100 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 27: $15/$35/$60/50% w/ $100 max and $200 deductible</fullName>
                </value>
                <value>
                    <fullName>$15/$35/$60/50% w/ $100 maximum and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>$0/$25/$45/50% w/ $75 maximum and combined Medical/Rx deductible</fullName>
                </value>
                <value>
                    <fullName>$10/$25/$45/50% w/ $75 maximum and combined Medical/Rx deductible</fullName>
                </value>
                <value>
                    <fullName>$15/$35/$60/50% w/ $75 maximum and combined Medical/Rx deductible</fullName>
                </value>
                <value>
                    <fullName>$8/$15/$35/50% w/ $75 maximum and combined Medical/Rx deductible</fullName>
                </value>
                <value>
                    <fullName>$0/$25/$45/50% w/ $75 maximum and combined Medical/Rx deductible ($0 select generics not subject to deductible)</fullName>
                </value>
                <value>
                    <fullName>$15/$35/$60/50% w/ $150 maximum and $500 deductible</fullName>
                </value>
                <value>
                    <fullName>$15/$35/$60/50% w/ $150 maximum and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>$15/$35/$60/50% w/ $150 maximum</fullName>
                </value>
                <value>
                    <fullName>$0/$50/$75/50% w/ $150 maximum and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>$10/$30/$60/50% w/ $150 maximum and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>$15/$45/$70/50% w/ $150 maximum and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>99999</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Old formula value : Benefit_Request_Form__r.Account__r.NASCO_Original_Effective_Date__c.
Changed as per clarification provided by Virgilio as part of defect 35600</description>
        <formula>Benefit_Request_Form__r.Benefit_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Change_Drawloop__c</fullName>
        <formula>Benefit_Request_Form__r.Benefit_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date of Change Drawloop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Arrangement__c</fullName>
        <label>Employer Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employer Sponsored</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Type__c</fullName>
        <formula>TEXT(Benefit_Request_Form__r.Enrollment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErectileDysfunc_c__c</fullName>
        <label>Erectile Dysfunction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Erectile_Dysfunction_Limitation_Others__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Erectile Dysfunction Limitation/Others</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exchange_CDH_Fund_Type__c</fullName>
        <label>Exchange CDH Fund Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlueFund</fullName>
                </value>
                <value>
                    <fullName>Compatible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_CDH_Type__c</fullName>
        <label>Exchange CDH Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HSA</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_Package_Option__c</fullName>
        <label>Exchange Package Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy 1</fullName>
                </value>
                <value>
                    <fullName>Dummy 2</fullName>
                </value>
                <value>
                    <fullName>Dummy 3</fullName>
                </value>
                <value>
                    <fullName>Healthy Behaviors with Advantage Products</fullName>
                </value>
                <value>
                    <fullName>Healthy Behaviors without Advantage Products</fullName>
                </value>
                <value>
                    <fullName>High Value with Advantage Products</fullName>
                </value>
                <value>
                    <fullName>High Value without Advantage Products</fullName>
                </value>
                <value>
                    <fullName>Maximum Access</fullName>
                </value>
                <value>
                    <fullName>Maximum Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusive_Specialty_Provider_Network__c</fullName>
        <label>Exclusive Specialty Provider Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Requires Approval</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusive_Specialty_Provider_Network_del__c</fullName>
        <formula>TEXT( Benefit_Request_Form__r.Exclusive_Specialty_Provider_Network__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can have value only if BRF is of type "ASO"</inlineHelpText>
        <label>Exclusive Specialty Provider  Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclusive_Specialty_Provider_Network_old__c</fullName>
        <formula>TEXT( Benefit_Request_Form__r.Exclusive_Specialty_Provider_Network__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can have value only if BRF is of type "ASO"</inlineHelpText>
        <label>Exclusive Specialty Provider  Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtraCare_Health_Care_Card__c</fullName>
        <label>ExtraCare Health Care Card</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtraCare_Health_Care_Card_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ExtraCare Health Care Card</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extra_Health_Care_Card__c</fullName>
        <formula>Benefit_Request_Form__r.ExtraCare_Health_Care_Card__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can have value only if BRF is of type "ASO"</inlineHelpText>
        <label>Extra Health Care_Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSA_BlueFund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSA BlueFund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Deductible_Calculation_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Family Deductible Calculation Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Deductible_Calculation__c</fullName>
        <formula>Plan_Name__r.FamilyDedCalculation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Deductible Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Deductible__c</fullName>
        <label>Family Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FertilityAgents__c</fullName>
        <label>Fertility Agents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fertility_Agents_Limitation_Others__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fertility Agents Limitation/Others</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstHelp__c</fullName>
        <label>FirstHelp</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Funding_Arrangement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formulary_Picklist__c</fullName>
        <label>Formulary</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TierCount__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formulary__c</fullName>
        <formula>TEXT( Benefit_Request_Form__r.Formulary__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can have value only if BRF is of type "ASO"</inlineHelpText>
        <label>Formulary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Arrangement__c</fullName>
        <inlineHelpText>This field is prepopulated when the BRF funding arrangement is of type ASO/Risk</inlineHelpText>
        <label>Funding Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Dispensing__c</fullName>
        <label>Generic Dispensing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory Generics</fullName>
                </value>
                <value>
                    <fullName>Restricted Generics</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Drugs_Tier_1__c</fullName>
        <label>Generic Drugs (Tier 1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Step_Therapy_F__c</fullName>
        <formula>TEXT(Benefit_Request_Form__r.Generic_Step_Therapy__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Step Therapy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Step_Therapy__c</fullName>
        <label>Generic Step Therapy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandfathered_PPACA_Status__c</fullName>
        <label>PPACA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandfathered_Status__c</fullName>
        <label>Grandfathered Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grandfathered</fullName>
                </value>
                <value>
                    <fullName>Non-Grandfathered</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrowthHormone__c</fullName>
        <label>Growth Hormone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HBSelectGeneric__c</fullName>
        <label>HB Select Generic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waive Ded/Waive Copay (Standard)</fullName>
                </value>
                <value>
                    <fullName>Waive Ded/Apply Copay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Benefit_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will check if Proposed product has Benefits saved in Run Time</description>
        <label>Has Benefit Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INN_OON_Ded_Contribute_To_Each_Other__c</fullName>
        <label>INN &amp; OON Ded Contribute To Each Other</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INN_and_OON_Annual_Maximum_combined__c</fullName>
        <label>INN and OON Annual Maximum combined</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INN_and_OON_Lifetime_Maximum_combined__c</fullName>
        <label>INN and OON Lifetime Maximum combined</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INN_and_OON_OOP_Contribute_To_Each_Other__c</fullName>
        <label>INN and OON OOP Contribute To Each Other</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual_Deductible__c</fullName>
        <label>Individual Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integrated_Care_Out_Vendor__c</fullName>
        <formula>TEXT(    Related_Medical_Product__r.Integrated_Carved_Out_Vendor__c    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integrated - Carved-Out Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Carved_Out_Vendor__c</fullName>
        <label>Integrated - Carved-Out Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CVS (Direct)</fullName>
                </value>
                <value>
                    <fullName>ESI</fullName>
                </value>
                <value>
                    <fullName>Other - Requires Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Deductible_Integrator__c</fullName>
        <label>Integrated Deductible Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Deductible_Integrator_del__c</fullName>
        <formula>text(Plan_Name__r.Integrated_DedIndicator__c)</formula>
        <label>Integrated Deductible Integrator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Deductible_Integrator_old__c</fullName>
        <formula>text(Plan_Name__r.Integrated_DedIndicator__c)</formula>
        <label>Integrated Deductible Integrator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Deductibles_and_OOPs1__c</fullName>
        <formula>IF(ISPICKVAL( Related_Medical_Product__r.Integrated_Non_Integrated__c ,'Integrated'),'Yes',IF(ISPICKVAL( Related_Medical_Product__r.Integrated_Non_Integrated__c ,'Non-Integrated'),'No',Null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integrated Deductibles and OOPs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Deductibles_and_OOPs__c</fullName>
        <label>Integrated Deductibles and OOPs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Non_Integrated__c</fullName>
        <label>RX Integration</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Integrated_Deductible_Integrator__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Integrated - Carved-Out</fullName>
                </value>
                <value>
                    <fullName>Non-Integrated</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_OOP_Integration__c</fullName>
        <label>Integrated OOP Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_OOP_Integration_del__c</fullName>
        <formula>text(Plan_Name__r.Integrated_OOP_Indicator__c )</formula>
        <label>Integrated OOP Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_OOP_Integration_old__c</fullName>
        <formula>text(Plan_Name__r.Integrated_OOP_Indicator__c )</formula>
        <label>Integrated OOP Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_OOP_Max_Carved_Out_Vendor__c</fullName>
        <label>Integrated – OOP Max Carved-Out Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CVS (Direct)</fullName>
                </value>
                <value>
                    <fullName>ESI</fullName>
                </value>
                <value>
                    <fullName>Other – Requires Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_RX_Integration_ARC_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is RX Integration ARC Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jurisdiction_Pick__c</fullName>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <formula>Text(Benefit_Request_Form__r.Jurisdiction__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jurisdiction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MHP_Acknowledgement__c</fullName>
        <formula>"For risk business, the medical benefits must be tested by CareFirst for Mental Health Parity compliance and may require changes after final sale."</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MHP Acknowledgement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailOrdDispnsMaintDaysSupp__c</fullName>
        <inlineHelpText>Mail Order Dispensing Maintenance Days Supply</inlineHelpText>
        <label>Maintenance Days Supply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailOrdDispnsNMaintDaysSupp__c</fullName>
        <inlineHelpText>Mail Order Dispensing Non-Maintenance Days Supply</inlineHelpText>
        <label>Non-Maintenance Days Supply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailOrderAllDrugs__c</fullName>
        <label>Mail Order All Drugs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Choic_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance Choice Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Choice__c</fullName>
        <label>Maintenance Choice</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Funding_Arrangement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Choice_del__c</fullName>
        <formula>TEXT( Benefit_Request_Form__r.Maintenance_Choice__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can have value only if BRF is of type "ASO"</inlineHelpText>
        <label>Maintenance Choice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Drugs__c</fullName>
        <label>Maintenance Drugs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medical_Plan_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Plan Comments</label>
        <type>TextArea</type>
    </fields>
</CustomObject>